[metadata]
name = async-helper-sebst
version = 0.0.1
author = Sebastian Steins
author_email = opensource@seb.st
description = A bridge between the asynchronous and synchronous world
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sebst/async-helper
project_urls =
    Bug Tracker = https://github.com/sebst/async-helper/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src